Update KeyframeAnimationEffect to reflect FPWD
- Update KeyframeAnimationEffect API
- Remove Keyframe from API as this is now just a dictionary
- Normalize keyframe dictionaries
- Update algorithm for normalizing (distributing) the list of keyframes
- Update algorithm for sampling a KeyframeAnimationEffect
- Handle interpolating between keyframes with different composite operations
- Remove redundant KeyframeList and GroupedAnimationEffect types
- Remove merge composite operation
- Update tests accordingly

Note that the only substantial change to the tests is in test-compositor.

--- a/test/testcases/test-bounds.html
+++ b/test/testcases/test-bounds.html
@@ -29,7 +29,7 @@ div.anim {
 <script>
 "use strict";
 
-var animFunc = {left: ["100px", "200px"]};
+var animFunc = [{left: "100px"}, {left: "200px"}];
 
 // Test that the animation interval uses inclusive start and end bounds.
 var elem1 = document.getElementById("anim1");
