--- a/test/testcases/test-partial-keyframes.html
+++ b/test/testcases/test-partial-keyframes.html
@@ -34,7 +34,10 @@ limitations under the License.
 "use strict";
 var rect = document.querySelector(".anim");
 
-document.timeline.play(new Animation(rect,
-    {x: "400px", y: ["300px", "200px"], width: ["100px", "20px", "50px"]}, 1));
+document.timeline.play(new Animation(rect, [
+  {y: "300px", width: "100px"},
+  {width: "20px"},
+  {x: "400px", y: "200px", width: "50px"},
+], 1));
 
 </script>
