--- a/test/testcases/test-rectangle.html
+++ b/test/testcases/test-rectangle.html
@@ -36,10 +36,11 @@ position: absolute;
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
-var anim = {'clip': [
-  'rect(300px, 400px, 300px, 400px)',
-  'rect(0px, 800px, 600px, 0px)'
-]};
+
+var anim = [
+  {clip: 'rect(300px, 400px, 300px, 400px)'},
+  {clip: 'rect(0px, 800px, 600px, 0px)'},
+];
 var timing = 1;
 document.timeline.play(
     new Animation(document.querySelector('#test'), anim, timing));
