--- a/test/testcases/test-start-time-iterations.html
+++ b/test/testcases/test-start-time-iterations.html
@@ -86,7 +86,7 @@ var containers = ["ca", "cb", "cc", "cd"];
 
 var directions = ["normal", "reverse", "alternate", "alternate-reverse"];
 
-var animation = {left: ["100px", "500px"]};
+var animation = [{left: "100px"}, {left: "500px"}];
 
 // We use a new group for each animation to avoid coupling due to the intrinsic
 // iterationDuration of a par group.
