--- a/test/testcases/test-start-time.html
+++ b/test/testcases/test-start-time.html
@@ -72,7 +72,7 @@ var containers = ["ca", "cb"];
 
 var directions = ["normal", "reverse"];
 
-var animation = {left: ["100px", "300px"]};
+var animation = [{left: "100px"}, {left: "300px"}];
 
 for (var i = 0; i < directions.length; i++) {
   var container = document.getElementById(containers[i]);
