--- a/test/testcases/test-transform-primitives.html
+++ b/test/testcases/test-transform-primitives.html
@@ -101,8 +101,10 @@ for (var i = 0; i < transformValues.length; i++) {
       div.style.top = y + 'px';
       div.style.left = x + 'px';
       div.id = "i" + i + "_" + j + "_" + k
-      animations.push(new Animation(div, {"transform":
-          [transformValues[i][j], transformValues[i][k]]}, 2));
+      animations.push(new Animation(div, [
+        {transform: transformValues[i][j]},
+        {transform: transformValues[i][k]},
+      ], 2));
       x += separation_x;
       if (x > max_x) {
         x = 20;
