--- a/test/testcases/test-dynamic-load.html
+++ b/test/testcases/test-dynamic-load.html
@@ -55,7 +55,7 @@ window.addEventListener('load', function() {
   s.src = "../../web-animations.js";
   s.addEventListener('load', function() {
     document.timeline.play(new Animation(a,
-      {"left": ["0px", "200px"]},
+      [{left: "0px"}, {left: "200px"}],
       0.5
     ));
 
