--- a/test/testcases/test-iteration-start.html
+++ b/test/testcases/test-iteration-start.html
@@ -125,6 +125,9 @@ var containers = ["ca", "cb", "cc", "cd"];
 var directions = ["normal", "reverse", "alternate", "alternate-reverse"];
 var groups = [];
 
+var effect100To300 = [{left: "100px"}, {left: "300px"}];
+var effect100To180 = [{left: "100px"}, {left: "180px"}];
+
 for (var i = 0; i < directions.length; i++) {
   var dir = directions[i];
   groups.push(
@@ -135,28 +138,28 @@ for (var i = 0; i < containers.length; i++) {
   var container = document.getElementById(containers[i]);
   // Test basic use.
   groups[i].append(new Animation(container.getElementsByClassName("a")[0],
-      {left: ["100px", "300px"]},
+      effect100To300,
       {iterationDuration: 1, iterationCount: 3.1, iterationStart: 0.3}));
   groups[i].append(new Animation(container.getElementsByClassName("b")[0],
-      {left: ["100px", "300px"]},
+      effect100To300,
       {iterationDuration: 1, iterationCount: 3.4, iterationStart: -0.2}));
   // Test that iterationStart is not clipped to iterationCount.
   groups[i].append(new Animation(container.getElementsByClassName("c")[0],
-      {left: ["100px", "300px"]},
+      effect100To300,
       {iterationDuration: 1, iterationCount: 1.6, iterationStart: 1.8}));
   // Test that nothing odd happens when iterationCount is an integer.
   groups[i].append(new Animation(container.getElementsByClassName("d")[0],
-      {left: ["100px", "300px"]},
+      effect100To300,
       {iterationDuration: 1, iterationCount: 3.0, iterationStart: 0.4}));
   // Test that nothing odd happens when (iterationCount - iterationStart) is an
   // integer.
   groups[i].append(new Animation(container.getElementsByClassName("e")[0],
-      {left: ["100px", "300px"]},
+      effect100To300,
       {iterationDuration: 1, iterationCount: 3.2, iterationStart: 0.2}));
   // Test that nothing odd happens when (iterationCount + iterationStart) is an
   // integer.
   groups[i].append(new Animation(container.getElementsByClassName("f")[0],
-      {left: ["100px", "180px"]},
+      effect100To180,
       {iterationDuration: 1, iterationCount: 2.8, iterationStart: 0.2}));
   document.timeline.play(groups[i]);
 }
