--- a/test/testcases/test-reparent.html
+++ b/test/testcases/test-reparent.html
@@ -42,7 +42,7 @@ limitations under the License.
 
 // Run a simple animation. It should animate indefinitely.
 var anim = new Animation(document.getElementById("a"),
-    {left: ["100px", "500px"]}, {iterationCount: Infinity, iterationDuration: 2.0});
+    [{left: "100px"}, {left: "500px"}], {iterationCount: Infinity, iterationDuration: 2.0});
 document.timeline.play(anim);
 
 // After 3.0s, move it to a parallel group and run that.
