--- a/test/testcases/test-text-shadow.html
+++ b/test/testcases/test-text-shadow.html
@@ -20,5 +20,5 @@ limitations under the License.
 <script>
 "use strict";
 document.timeline.play(new Animation(document.body,
-    {'textShadow': ['100px 100px red, 0px 100px 10px red', '0px 0px']}, 2));
+    [{textShadow: '100px 100px red, 0px 100px 10px red'}, {textShadow: '0px 0px'}], 2));
 </script>
