--- a/test/testcases/test-wrapping-bug.html
+++ b/test/testcases/test-wrapping-bug.html
@@ -30,25 +30,28 @@ limitations under the License.
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
+
+var effect = [{transform: "translate(-800px,0px)"}, {transform: "translate(0px,0px)"}];
+
 var group = new ParGroup();
 document.timeline.play(new ParGroup([
     new Animation(overflow,
-                  { transform: ["translate(-800px,0px)", "translate(0px,0px)"] },
+                  effect,
                   { iterationDuration: 0.3, startDelay: 0.25, fillMode: 'forwards' })]));
 
 document.timeline.play(new ParGroup([
     new Animation(overflowControl,
-                  { transform: ["translate(-800px,0px)", "translate(0px,0px)"] },
+                  effect,
                   { iterationDuration: 0.3, startDelay: 0.2, fillMode: 'forwards' })]));
 
 document.timeline.play(new ParGroup([
     new Animation(underflow,
-                  { transform: ["translate(-800px,0px)", "translate(0px,0px)"] },
+                  effect,
                   { iterationDuration: 0.3, startDelay: 0.20001, fillMode: 'none' })]));
 
 document.timeline.play(new ParGroup([
     new Animation(underflowControl,
-                  { transform: ["translate(-800px,0px)", "translate(0px,0px)"] },
+                  effect,
                   { iterationDuration: 0.3, startDelay: 0.2, fillMode: 'none' })]));
 
 </script>
