--- a/test/testcases/test-change-playback-rate.html
+++ b/test/testcases/test-change-playback-rate.html
@@ -70,7 +70,7 @@ var a2 = new Animation(undefined,
       player2.playbackRate = playbackRate;
       document.querySelector("#a").textContent = playbackRate;
     }},
-    a1.timing.clone());
+    a1.specified.clone());
 var player2 = document.timeline.play(a2);
 
 </script>
