--- a/test/testcases/test-dynamic-load.html
+++ b/test/testcases/test-dynamic-load.html
@@ -43,7 +43,11 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script>
   "use strict";
-  animTestRunner.waitUntilDone();
+
+  test_at(0.00, function() { assert_styles(".anim", {"left": "0px"}) }, "Left 0px at t=0");
+  test_at(0.25, function() { assert_styles(".anim", {"left": "100px"}) }, "Left 100px at t=0.25");
+  test_at(0.50, function() { assert_styles(".anim", {"left": "200px"}) }, "Left 200px at t=0.5");
+
   window.addEventListener('load', function() {
     var s = document.createElement('script');
     s.src = "../../web-animations.js";
@@ -51,8 +55,8 @@ limitations under the License.
       document.timeline.play(new Animation(a,
         {"left": ["0px", "200px"]},
         0.5
-      ));  
-      animTestRunner.done();
+      ));
+
     })
     document.head.appendChild(s);
   });
