--- a/test/testcases/test-restart.html
+++ b/test/testcases/test-restart.html
@@ -30,55 +30,51 @@ div.anim {
 <script>
 "use strict";
 
-animTestRunner.waitUntilDone();
-
-// Don't use a local named requestAnimationFrame, to avoid potential problems
-// with hoisting.
-var raf = window.requestAnimationFrame || window.webkitRequestAnimationFrame ||
-    window.mozRequestAnimationFrame || window.msRequestAnimationFrame;
-
 var animFunc = {left: "100px"};
 var anim1 = new Animation(document.getElementById("anim1"), animFunc, 1.0);
 var player1 = document.timeline.play(anim1);
+
 var anim2 = new Animation(document.getElementById("anim2"), animFunc, 1.0);
 var player2 = document.timeline.play(anim2);
 
 // Check that once an animation is completed, creating a new Player restarts it.
-player1.currentTime = 1.0;
-raf(function() {
-  test(function() {assert_equals(getComputedStyle(anim1.targetElement).left,  "100px")},
-       "Animation 1 should be in end state");
-  document.timeline.play(anim1);
-  raf(function() {
-    test(function() {assert_equals(parseInt(getComputedStyle(anim1.targetElement).left) > 0,  true)},
-         "Animation 1 should not be in start state");
-    test(function() {assert_equals(parseInt(getComputedStyle(anim1.targetElement).left) < 100,  true)},
-         "Animation 1 should not be in end state");
-  });
-});
+test_at(1.0, function() {
+    assert_styles('#anim1', {'left': '100px'});
+    document.timeline.play(anim1);
+  },
+  "Animation 1 should be in end state");
+
+test_at(1.0, function() {assert_styles('#anim1', {'left': '0px'})},
+  "Animation 1 should be in start state");
+
+test_at(2.0, function() {assert_styles('#anim1', {'left': '100px'})},
+  "Animation 1 should be in end state a second time");
 
 // Check that once an animation is completed, setting Player.currentTime = 0
 // restarts it.
-player2.currentTime = 1.0;
-raf(function() {
-  test(function() {assert_equals(getComputedStyle(anim2.targetElement).left,  "100px")},
-       "Animation 2 should be in end state");
-  player2.currentTime = 0.0;
-  raf(function() {
-    test(function() {assert_equals(parseInt(getComputedStyle(anim2.targetElement).left) > 0,  true)},
-         "Animation 2 should not be in start state");
-    test(function() {assert_equals(parseInt(getComputedStyle(anim2.targetElement).left) < 100,  true)},
-         "Animation 2 should not be in end state");
+test_at(1.0, function() {
+    assert_styles("#anim2", {'left': '100px'});
+    player2.currentTime = 0.0;
+  },
+  "Animation 2 should be in end state");
 
-    animTestRunner.done();
-  });
-});
+test_at(1.0, function() {
+    assert_styles('#anim2', {'left': '0px'});
+  },
+  "Animation 2 should be in start state");
+
+test_at(2.0, function() {
+    assert_styles('#anim1', {'left': '100px'});
+  },
+  "Animation 2 should be in end state a second time");
 
 // Check that TimedItem.localTime is read-only.
 var anim3 = new Animation(document.getElementById("anim2"), animFunc, 1.0);
 document.timeline.play(anim3);
-anim3.localTime = 0;
-test(function() {assert_equals(anim3.localTime,  null)},
-     "TimedItem.localTime should be read-only");
+test(function() {
+    assert_throws(new TypeError(), function() {anim3.localTime = 0;});
+    assert_equals(anim3.localTime,  null);
+  },
+  "TimedItem.localTime should be read-only");
 
 </script>
